log
Thu 07 Sep 2023 04:47:56 PM UTC: 
 tests:  0|6
total_score: 0/70
2331379
Thu 07 Sep 2023 04:52:21 PM UTC: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:61: error: expected ‘)’ before ‘;’ token
   56 |   HashMap * map = (HashMap*) malloc(capacity*sizeof(HashMap);
      |                                    ~                        ^
      |                                                             )
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
In file included from test.c:4:
hashmap.c:56:13: error: unused variable ‘map’ [-Werror=unused-variable]
   56 |   HashMap * map = (HashMap*) malloc(capacity*sizeof(HashMap);
      |             ^~~
test.c:512: error: control reaches end of non-void function [-Werror=return-type]
cc1: all warnings being treated as errors
Compilation failed
f5ca0bc
Thu 07 Sep 2023 04:52:34 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:61: error: expected ‘)’ before ‘;’ token
   56 |   HashMap * map = (HashMap*) malloc(capacity*sizeof(HashMap);
      |                                    ~                        ^
      |                                                             )
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
In file included from test.c:4:
hashmap.c:56:13: error: unused variable ‘map’ [-Werror=unused-variable]
   56 |   HashMap * map = (HashMap*) malloc(capacity*sizeof(HashMap);
      |             ^~~
test.c:512: error: control reaches end of non-void function [-Werror=return-type]
cc1: all warnings being treated as errors
Compilation failed
cb7b6cd
Thu 07 Sep 2023 04:53:00 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:56: error: expected ‘)’ before ‘;’ token
   57 |   map->buckets = (Pair*) calloc(capacity, sizeof(Pair*);
      |                                ~                       ^
      |                                                        )
hashmap.c:57:16: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   57 |   map->buckets = (Pair*) calloc(capacity, sizeof(Pair*);
      |                ^
hashmap.c:59:14: error: expected ‘;’ before ‘}’ token
   59 |   return map;
      |              ^
      |              ;
   60 | }
      | ~             
hashmap.c:60:1: error: control reaches end of non-void function [-Werror=return-type]
   60 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
ab6f240
Thu 07 Sep 2023 04:53:12 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:57:16: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   57 |   map->buckets = (Pair*) calloc(capacity, sizeof(Pair*));
      |                ^
cc1: all warnings being treated as errors
Compilation failed
33060d4
